--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,37 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-do List</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container col-xxl-8 px-4 py-3 mt-5 mx-auto">
-        <div class="row flex-lg-row align-items-center g-5 py-5">
-          <div class="col-10 col-sm-8 col-lg-6">
-            <img src="quote.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
-          </div>
-          <div class="col-lg-6">
-            <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3 pr-3">To-Do List</h1>
-            <form action="/" method="POST" class="d-inline">
-            <input type="text" placeholder="Add Items" name="todoInput" class="m-3">
-            <button type="submit" class="btn btn-primary btn-md px-4 me-md-2" id="btn">Add Item</button>
-            </form>
-            <form action="/reset" class="d-inline" method="post"><button class=" btn btn-danger d-inline" >Hard Reset</button>
-              </form>
-        <ul id="todo-list-items">
-          <%   for(i=0;i<listItems.length;i++){ %>
-            <li><input type="checkbox" class="check"><label><%= listItems[i] %> </label></li>
-    <%      } %>
-          <!-- <%= listItems %> -->
-        </ul>  
-        </div>
-        </div>
+    <div class="box" id="heading">
+      <h1><%= todayvalue %></h1>
+    </div>
+    <div class="box">
+        <%   for(i=0;i<listItems.length;i++){ %>
+          <div class="item">
+            <input type="checkbox" >
+            <p><%= listItems[i] %></p>
+            </div>  
+  <%      } %>
+  <form action="/" method="POST" class="item">
+    <input type="text" placeholder="New Items" name="todoInput" autocomplete="off">
+    <button type="submit" id="btn">+</button>
+    </form>
       </div>
-      <div class="container">
-        <footer class=" border-top fixed-bottom">
-          <p class="text-center text-body-secondary">© 2024 Stephen Starc <code> insta: stephen.starc</code></p>
-        </footer>
-      </div>
+      <!-- <form action="/reset" class="d-inline" method="post"><button class=" btn btn-danger d-inline" >Hard Reset</button>
+      </form> -->
+        
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
       <script src="./scirpt.js"></script>
 </body>
